build 732 Folder Synch - working beta adds synch of Contacts and Folder-tree